Fix overflowing dropdowns

--- a/src/TeamTavern/Client/Components/SingleSelect.scss
+++ b/src/TeamTavern/Client/Components/SingleSelect.scss
@@ -7,8 +7,11 @@
     @extend %bordered;
     height: 20px;
     line-height: 20px;
-    padding: 9px 12px;
+    padding: 9px 40px 9px 12px;
     user-select: none;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 
     &::after {
         content: "";
