--- a/src/TeamTavern/Client/Style/Input.scss
+++ b/src/TeamTavern/Client/Style/Input.scss
@@ -14,14 +14,17 @@
 
     .input-group {
         flex-basis: 100%;
+        max-width: 100%;
 
         @media screen and (min-width: 630px) {
             flex-basis: calc(50% - 21px);
+            max-width: calc(50% - 21px);
             margin-right: 21px;
         }
 
         @media screen and (min-width: 930px) {
             flex-basis: calc(33.33% - 21px);
+            max-width: calc(33.33% - 21px);
         }
     }
 }
